[tool.poetry]
name = "repl-nix-autonorobo"
version = "0.1.0"
description = ""
authors = ["Jonas & Phillip"]
readme = "README.md"
packages = [{include = "repl_nix_autonorobo"}]

[tool.poetry.dependencies]
python = "^3.12"
gpiozero = "^2.0.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
